# web-analytics-pages-viewed

./: .answers.yml  .gitignore  .markdownlint.json  .pre-commit-config.yml  .yamllint.yml  CHANGELOG.md  LICENSE  NOTICE  README.md  RELEASE_NOTES.md  example_output.json  pyproject.toml
.github/workflows/: codeql.yml  prod-release.yml  release.yml  run-validate.yml  security.yml
docker/: docker-compose.yml
docker/producer/: Dockerfile  producer.py
infrastructure/docker/: docker-compose.yml
pipeline/config/: pipeline_config.yaml.jinja
pipeline/dataflow/: main.py  options.py
samples/: output_sample_1.jsonl
services/java-pipeline/: dependency-reduced-pom.xml  pom.xml
services/java-pipeline/src/main/java/com/example/: AggregateEvents.java  FilterEvents.java  ReadFromKafka.java  ValidateEvents.java  WebAnalyticsPipeline.java
services/java-pipeline/src/main/java/com/example/model/: Event.java  EventParams.java
services/producer/: Dockerfile  README.md  producer.py  pyproject.toml
web-analytics-pages-viewed-java/: dependency-reduced-pom.xml  pom.xml
web-analytics-pages-viewed-java/src/main/java/com/example/: AggregateEvents.java  DecodeMessageFn.java  FilterEvents.java  ValidateEvents.java  WebAnalyticsPipeline.java
web-analytics-pages-viewed-python/: README.md  pyproject.toml  requirements.txt
web-analytics-pages-viewed-python/pipelines/pages_viewed_streaming/: docker-compose.yml  setup.py
web-analytics-pages-viewed-python/pipelines/pages_viewed_streaming/config/: pipeline_config.yaml.jinja
web-analytics-pages-viewed-python/pipelines/pages_viewed_streaming/dataflow/: main.py  options.py  schemas.py
web-analytics-pages-viewed-python/pipelines/pages_viewed_streaming/dataflow/transforms/: aggregate.py  filter.py  validate.py
web-analytics-pages-viewed-python/pipelines/pages_viewed_streaming/docker/kafka/: Dockerfile  create-topics.sh  delete-topics.sh  kafka-entrypoint.sh
web-analytics-pages-viewed-python/terraform/: data.yaml.jinja  jinja_variables.yaml  proc.yaml.jinja  variables.tfvars
web-analytics-pages-viewed-python/terraform/infra/: main.tf  variables.tf  versions.tf
