[tool.poetry]
name = "web_analytics_pages_viewed"
version = "0.1.0"
description = "Processes synthetic web page view events and calculates the time a user has spent on the page in a streaming manner. Events will be emitted as outputs to show how long a user has been viewing a page within a sequence."
authors = ["Aaron Ginder <aaronginder@hotmail.co.uk>"]
license = "Apache License 2.0"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
copier = "^9.4.1"
apache-beam = {extras = ["flink"], version = "^2.66.0"}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
